--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,20 +1,12 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Log In
+    Main Page
 {% endblock %}
 
 {% block main %}
     
-    <form action="/login" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
-        </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
-        </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
-    </form>
+ 
 
     <div class="container">
         <div class="row">
@@ -23,7 +15,7 @@
             <p class="lead">Demo application to buy and sell stocks, view your portfolio's performance over time, and view your transaction history. </p>
             <a class="btn btn-info btn-lg text-white register " href="/register">Sign Up</a>
           </div>
-          <div class="col-md-6 order-1 order-md-2 align-self-md-center">
+          <div class="col-md-6 order-1 order-md-2 align-self-center">
             <object type="image/svg+xml" data="/static/img/landing.svg" ></object>
           </div>
         </div>
