--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">ST</span><span class="red">OC</span><span class="yellow">KF</span><span class="green">UN</span> <span class="red">Finance</span></a>
+                <a class="navbar-brand" href="/home">WealBuild <span> <img src="/static/img/logo.png" height="50px" width="50px"> </span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -58,7 +58,7 @@
 
                     {% else %}
                         <ul class="navbar-nav ms-auto m-2">
-                            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                            <li class="nav-item"><a class="nav-link btn btn-info btn-sm register text-white" href="/register">Sign Up</a></li>
                             <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
                         </ul>
                     {% endif %}
