--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@ Portfolio
 {% block main %}
 
 
-<table class="table table-striped" style="width: 80%">
+<table class="table table-striped mt-10" style="width: 80%">
     <thead>
             <tr>
                 <th>Symbol</th>
@@ -18,7 +18,7 @@ Portfolio
                 <th>TOTAL</th>
            </tr>
 
-        </th>
+        
     </thead>
 
     <tbody>
