--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,7 +7,7 @@
 {% block main %}
     
  
-
+    <img src="../static/img/right screen.svg" class="background">
     <div class="container">
         <div class="row">
           <div class="col-md-6 order-2 order-md-1 jumbotron text-start pt-sm-0 pt-md-5">
@@ -15,7 +15,7 @@
             <p class="lead">Demo application to buy and sell stocks, view your portfolio's performance over time, and view your transaction history. </p>
             <a class="btn btn-info btn-lg text-white register " href="/register">Sign Up</a>
           </div>
-          <div class="col-md-6 order-1 order-md-2 align-self-center">
+          <div class="col-md-6 order-1 order-md-2 ">
             <object type="image/svg+xml" data="/static/img/landing.svg" ></object>
           </div>
         </div>
