--- a/templates/buy.html
+++ b/templates/buy.html
@@ -6,20 +6,22 @@ BUY
 
 {% block main %}
 
-<form method="POST" action="\buy">
 
-    <div class=" mb-3">
-        <input type="text" class=" form-control mx-auto w-auto" autofocus autocomplete="off" name="symbol" placeholder="Symbol">
+
+<form method="POST" action="\buy" >
+    <div class="d-flex justify-content-center">
+        <input type="text" class=" form-control-lg  w-auto" autofocus autocomplete="off" name="symbol" placeholder="Symbol">
     </div>
-
-    <div class=" mb-3">
-        <input type="number" min="1" class=" form-control mx-auto w-auto" autofocus autocomplete="off" name="shares" placeholder="Quantity">
+    
+    <div class="d-flex justify-content-center">
+        <input type="number" min="1" class=" form-control-lg  w-auto" autofocus autocomplete="off" name="shares" placeholder="Quantity">
     </div>
-
-    <button class="btn btn-primary" > BUY </button><br>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-primary btn-info text-white btn-lg "> BUY </button><br>
+    </div>
     {{ preview }}
 
-</from>
+</form>
 
 
 {% endblock %}
