--- a/templates/history.html
+++ b/templates/history.html
@@ -6,41 +6,44 @@ History
 
 
 {% block main %}
-<h1> ORDER HISTORY </h1> <br>
 
-<table class="table table-striped" style="width: 80%">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Name</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Type</th>
-        </tr>
-    </thead>
+<div class="container">
+    <h1> ORDER HISTORY </h1> <br>
+    <table class="table table-striped" style="width: 80%">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Name</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Type</th>
+            </tr>
+        </thead>
 
-    <tbody>
-        {% for trans in transactions %}
+        <tbody>
+            {% for trans in transactions %}
 
-        <tr>
-            <td> {{ trans["time"] }}</td>
-            <td>{{ trans["stock"] }}</td>
-            <td>{{ trans["quantity"] }}</td>
-            <td>${{ trans["price"] }}</td>
-            {% if trans["type"] == "SELL" %}
-                <td style="color: red">{{ trans["type"] }}</td>
-            {% elif trans["type"] == "DEPOSIT" %}
-                <td style="color: darkorange">{{ trans["type"] }}</td>
-            {% else %}
-                <td style="color: green">{{ trans["type"] }}</td>
-            {% endif %}
+            <tr>
+                <td> {{ trans["time"] }}</td>
+                <td>{{ trans["stock"] }}</td>
+                <td>{{ trans["quantity"] }}</td>
+                <td>${{ trans["price"] }}</td>
+                {% if trans["type"] == "SELL" %}
+                    <td style="color: red">{{ trans["type"] }}</td>
+                {% elif trans["type"] == "DEPOSIT" %}
+                    <td style="color: darkorange">{{ trans["type"] }}</td>
+                {% else %}
+                    <td style="color: green">{{ trans["type"] }}</td>
+                {% endif %}
 
-        </tr>
+            </tr>
 
-        {% endfor %}
+            {% endfor %}
 
-    </tbody>
+        </tbody>
 
-</table>
+    </table>
+</div>
+
 
 {% endblock %}
