--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, width=device-width">
+        <meta name="viewport" content="initial-scale=1, width=device-width, shrink-to-fit=no">
 
         <!-- http://getbootstrap.com/docs/5.1/ -->
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
@@ -16,14 +16,13 @@
 
         <link href="/static/styles.css" rel="stylesheet">
 
-        <title>C$50 Finance: {% block title %}{% endblock %}</title>
+        <title>WealBuild: {% block title %}{% endblock %}</title>
 
     </head>
 
     <body>
 
-        <nav class="bg-light border navbar navbar-expand-md navbar-light">
-            <div class="container-fluid">
+        <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light border">
                 <a class="navbar-brand" href="/home">WealBuild <span> <img src="/static/img/logo.png" height="50px" width="50px"> </span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
@@ -37,7 +36,7 @@
                             <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
                             <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
                         </ul>
-                        <ul class="navbar-nav align-middle mt-2" style="font: italic small-caps bold 30px/30px Georgia, serif; color:Chartreuse ">
+                        <ul class="navbar-nav align-middle mt-2" style="font: italic small-caps bold 30px/30px Georgia, serif; color:rgb(0, 242, 255) ">
                             {{ username }}
                         </ul>
 
@@ -63,7 +62,6 @@
                         </ul>
                     {% endif %}
                 </div>
-            </div>
 
         </nav>
 
@@ -75,7 +73,7 @@
             </header>
         {% endif %}
 
-        <main class="container-fluid py-5 text-center">
+        <main class="mt-5">
             {% block main %}{% endblock %}
         </main>
 
