--- a/templates/preview.html
+++ b/templates/preview.html
@@ -3,17 +3,18 @@
 {% block title %} Confirmation {% endblock %}
 
 {% block main %}
-    <h2>
 
-            ORDER CONFIRMATION
-    </h2>
+<div class="d-flex justify-content-center">
+    <h2 class="display-4">ORDER CONFIRMATION </h2>
+    <span>
+        <br><h3 class="lead" style=" color: rgb(0, 213, 255);">Type: {{ type }}</h3>
+    </span>
+    
+</div>
+ 
 
-    <h3 style="padding: 1 rem; color: Chartreuse;">
-        Type: {{ type }}
-    </h3>
 
-
-    <table style="width: 50%; margin-top: 2rem;" class="table table-success table-striped" >
+    <table style="width: 50%; margin-top: 2rem;" class="table table-info table-striped" >
         <thead>
             <tr>
                 <th>Name</th>
@@ -64,7 +65,7 @@
 
     <div style="display: flex; margin-left: 50% ;">
     <form action="/confirm" method="POST"  >
-        <input type="submit" value="CONFIRM" style="margin-right: 1rem;" class="btn btn-primary">
+        <input type="submit" value="CONFIRM"  class="btn btn-primary me-2">
     </form>
     <form >
         <input type="submit" value="CANCEL" class="btn btn-primary">
