--- a/templates/sell.html
+++ b/templates/sell.html
@@ -6,7 +6,7 @@ SELL
 
 {% block main %}
 
-<form method="POST" action="\sell">
+<form method="POST" action="\sell" >
 
     <div class=" mb-3">
         <select name="symbol" class="form-select mx-auto w-auto" >
@@ -18,11 +18,15 @@ SELL
         </select>
 
     </div>
-    <div class=" mb-3">
-        <input type="number" min="1" class=" form-control mx-auto w-auto" autofocus autocomplete="off" name="shares" placeholder="Quantity">
+    <div class=" mb-3 d-flex justify-content-center">
+        <input type="number" min="1" class=" form-control-lg mx-auto w-auto" autofocus autocomplete="off" name="shares" placeholder="Quantity">
+    </div>  
+
+    <div class="d-flex justify-content-center">
+        
+        <button class="btn btn-info btn-lg text-white" > SELL </button><br>
     </div>
 
-    <button class="btn btn-primary" > SELL </button><br>
     {{ preview }}
 
 </form>
